[package]
name = "jb_space"
repository = "https://github.com/Filipponik/space-rs"
description = "Jetbrains Space API wrapper"
version = "0.1.4"
edition = "2024"
readme = "README.md"
authors = ["Filipponik"]
license = "MIT"
categories = ["web-programming::http-client"]
keywords = ["task", "issue", "task-management"]

[lib]
name = "space"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
mockito = "1.0"
serde_json = "1.0.142"
